# SecondPaper

./: LICENSE
FaceExpession/subprogram/: test.m  test_fixedDataset.m  test_randomSample.m  test_sample_random.m  x_trn.mat  x_tst.mat  y_three.mat  y_three_tst.mat  y_trn.mat  y_tst.mat
FaceExpession/subprogram/Dimension Reduction/: SparseLocal_FDA.m  lpp_self.m
FaceExpession/subprogram/deltaAndMu/: sparse_MFA.m
FaceExpession/subprogram/knn/: cknear.asv  cknear.mexw64
FaceExpession/subprogram/support vector machine(lib)/: SVC_lib_tt.m
FaceExpession/subprogram/zhou_libsvm-mat-2.84-1/: libsvc.asv  make.asv
Preprocessing/FaceCrop/: Crop_Face_Instructions.m  ImageLoad.m  cropFace.m  faceSave.m  face_segment.m
former/: LFDA.m  generateSamplePicOnCK.m  gus.asv  gusThree.m  mylda.m  x_trn.mat
former/CK12TrainsAccResults/: res2.mat  res3.mat  res4.mat  res5_CKonly6_12.mat  res6.mat  res8.mat
former/CK4TrainsAccResult/: res1.mat  res2.mat  res3.mat  res5_CKonly6_4.mat  res6.mat  res7.mat
former/CK8TrainsAcc/: res5.mat  res5_CKonly6_8.mat  res7.mat
former/Jaffe12TrainsAccResults/: res1.mat  res2.mat  res3.mat  res4.mat  res5_only6_12.mat  res8.mat
former/Jaffe16TrainsAccResults/: res1.mat  res3.mat  res4.mat  res5_only6_16.mat
former/Jaffe20TrainsAccResults/: res1.mat  res2.mat  res4.mat  res5.mat  res6.mat  res7.mat  res8.mat
former/Jaffe24TrainsAccResults/: res1.mat  res2.mat  res3.mat  res6.mat  res8.mat
former/Jaffe4TrainAccResults/: res2.mat  res4.mat  res5.mat  res5_only6_4.mat  res6.mat  res8.mat
former/Jaffe8TrainsAccResults/: res3.mat  res4.mat  res5.mat  res5_only6_8.mat  res6.mat  res7.mat
former/figures/: 2.fig  CK12TrainsNew.fig  CK4Trains.fig  CKSamples.fig  Jaffe12TrainsNew.fig  Jaffe16Trains.fig  Jaffe16TriansNew.fig  Jaffe8Trains.fig  Jaffe8TriansNew.fig  ThreeGussianDistribution.fig  untitled.fig
former/reviewFigure/: 2.fig  2Gussian.fig  3.fig  Three1.fig  Three2.fig  Three3.fig  Three5.fig
formerCode_Included_SMFA/: CK32RowFinal.mat  LDA.m  MFA.m  changeCK64Row2CK32Row.m  constructW.m  finalTest.m  findrationofbw.m  generateSamplesOnJAFFE.m  gus.m  x_tst.mat
formerCode_Included_SMFA/CK12TrainsAccResults/: res1.mat  res5.mat  res7.mat
formerCode_Included_SMFA/CK4TrainsAccResult/: res4.mat  res5.mat  res8.mat
formerCode_Included_SMFA/CK8TrainsAcc/: res1.mat  res2.mat  res3.mat  res4.mat  res6.mat  res8.mat
formerCode_Included_SMFA/Jaffe12TrainsAccResults/: res5.mat  res6.mat  res7.mat
formerCode_Included_SMFA/Jaffe16TrainsAccResults/: res2.mat  res5.mat  res6.mat  res7.mat  res8.mat
formerCode_Included_SMFA/Jaffe20TrainsAccResults/: res3.mat  res5_only6_20.mat
formerCode_Included_SMFA/Jaffe24TrainsAccResults/: res4.mat  res5.mat  res5_only6_24.mat  res7.mat
formerCode_Included_SMFA/Jaffe4TrainAccResults/: res1.mat  res3.mat  res7.mat
formerCode_Included_SMFA/Jaffe8TrainsAccResults/: res1.mat  res2.mat  res8.mat
formerCode_Included_SMFA/figures/: 1.fig  2final.fig  CK12Trains.fig  CK4TriansNew.fig  CK8Trains.fig  CK8TrainsNew.fig  Jaffe12Trians.fig  Jaffe20Trains.fig  Jaffe20TrainsNew.fig  Jaffe20TriansNew.fig  Jaffe24Trains.fig  Jaffe4TrainsNew.fig  Jaffe4Trians.fig  TwoGussianDistribution.fig
formerCode_Included_SMFA/reviewFigure/: 4.fig
hCRF_Toolbox_full_3.0a/UnitTest/: CMakeLists.txt  TestInference.cpp  TestOptimizer.cpp  TestShared.cpp
hCRF_Toolbox_full_3.0a/UnitTest/data/: dataInference.csv  labelsInference.csv  test_start_end.hcr  train_chunk_type.hcr  train_data.hcr
hCRF_Toolbox_full_3.0a/apps/: hCRF_2010.sln  hCRF_p.sln
hCRF_Toolbox_full_3.0a/apps/matHCRF/: matHCRF.vcproj  matHCRF.vcxproj
hCRF_Toolbox_full_3.0a/apps/testCNF/: main.cpp
hCRF_Toolbox_full_3.0a/data/idiap/: features.txt  labelsTrain.csv  model.txt
hCRF_Toolbox_full_3.0a/docs/: Manual.doc
hCRF_Toolbox_full_3.0a/libs/shared/hCRF/: CMakeLists.txt  hCRF.vcxproj
hCRF_Toolbox_full_3.0a/libs/shared/hCRF/include/: BackwardWindowRawFeatures.h  MultiviewFeatures.h  dataset.h  gradient.h  inferenceengine.h  model.h  toolbox.h
hCRF_Toolbox_full_3.0a/libs/shared/hCRF/src/: DataSequenceRealtime.cpp  Dummys.cpp  EvaluatorSharedLDCRF.cpp  FeaturesOne.cpp  GaussianWindowRawFeatures.cpp  GradientCNF.cpp  GradientHCNF.cpp  GradientHMMPerceptron.cpp  GradientLDCNF.cpp  GradientMVHCRF.cpp  GradientPerceptron.cpp  GradientSharedLDCRF.cpp  InferenceEngineBrute.cpp  InferenceEngineDC.cpp  InferenceEngineFB.cpp  InferenceEngineGBP.cpp  InferenceEngineJT.cpp  InferenceEngineLoopyBP.cpp  LabelEdgeFeatures.cpp  OptimizerASA.cpp  OptimizerOWL.cpp  OptimizerPerceptron.cpp  ToolboxCRF.cpp  ToolboxLVPERCEPTRON.cpp  ToolboxMVHCRF.cpp  ToolboxMVLDCRF.cpp  ToolboxSharedLDCRF.cpp  WindowRawFeatures.cpp  dataset.cpp  evaluatorHCRF.cpp  evaluatorLDCRF.cpp  evaluatorLVPERCEPTRON.cpp  evaluatorMVHCRF.cpp  featuregenerator.cpp  matrix.cpp  matrixSSE2.cpp  optimizer.cpp  toolbox.cpp
hCRF_Toolbox_full_3.0a/samples/C++/: rtldcrf.cpp
hCRF_Toolbox_full_3.0a/samples/matlab/: ComputeROC.m  CreateROC.m  test.m  (+5 more)
hCRF_full_3.0a/UnitTest/: TestModel.cpp  UnitTestHCRF.cpp  UnitTestHCRF.vcproj  UnitTestHCRF.vcxproj
hCRF_full_3.0a/apps/: hCRF.sln
(+109 files in other folders)
